{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 66,
  "lineage": "97b56ec8-47f5-dd2a-50ce-25885e329420",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b97d5c6250545cdb",
            "association_id": "eipassoc-095c596b956506cb3",
            "domain": "vpc",
            "id": "eipalloc-0b97d5c6250545cdb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03de60d0193d944ef",
            "private_dns": "ip-10-0-0-76.ec2.internal",
            "private_ip": "10.0.0.76",
            "public_dns": "ec2-44-210-211-187.compute-1.amazonaws.com",
            "public_ip": "44.210.211.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic ip az1"
            },
            "tags_all": {
              "Name": "elastic ip az1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08918d365f74915bd",
            "association_id": "eipassoc-0c7abd84f5b13eda7",
            "domain": "vpc",
            "id": "eipalloc-08918d365f74915bd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-005994d992dc46cb7",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-52-7-162-35.compute-1.amazonaws.com",
            "public_ip": "52.7.162.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic ip az2"
            },
            "tags_all": {
              "Name": "elastic ip az2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:internet-gateway/igw-00a6efd09f36415d7",
            "id": "igw-00a6efd09f36415d7",
            "owner_id": "256373779251",
            "tags": {
              "Name": "internet gateway"
            },
            "tags_all": {
              "Name": "internet gateway"
            },
            "vpc_id": "vpc-041c342817d146c51"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:256373779251:loadbalancer/app/my-alb/11bfdd4eb1d43869",
            "arn_suffix": "app/my-alb/11bfdd4eb1d43869",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-615368829.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:256373779251:loadbalancer/app/my-alb/11bfdd4eb1d43869",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0da119d4f373f129a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019c82cf2d8329e25"
              },
              {
                "subnet_id": "subnet-0ac16f3ced0d7fbf9"
              }
            ],
            "subnets": [
              "subnet-019c82cf2d8329e25",
              "subnet-0ac16f3ced0d7fbf9"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-041c342817d146c51",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:256373779251:listener/app/my-alb/11bfdd4eb1d43869/d14eba56d50d818f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:256373779251:listener/app/my-alb/11bfdd4eb1d43869/d14eba56d50d818f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:256373779251:loadbalancer/app/my-alb/11bfdd4eb1d43869",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b97d5c6250545cdb",
            "connectivity_type": "public",
            "id": "nat-03eb9eb3ecd74d33b",
            "network_interface_id": "eni-03de60d0193d944ef",
            "private_ip": "10.0.0.76",
            "public_ip": "44.210.211.187",
            "subnet_id": "subnet-019c82cf2d8329e25",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "aws_eip.eip_for_nat_gateway_az1",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08918d365f74915bd",
            "connectivity_type": "public",
            "id": "nat-0abbb9c16cab50e6f",
            "network_interface_id": "eni-005994d992dc46cb7",
            "private_ip": "10.0.1.246",
            "public_ip": "52.7.162.35",
            "subnet_id": "subnet-0ac16f3ced0d7fbf9",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "aws_eip.eip_for_nat_gateway_az2",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:route-table/rtb-061424fae6426adbb",
            "id": "rtb-061424fae6426adbb",
            "owner_id": "256373779251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03eb9eb3ecd74d33b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_nat_gw_az1"
            },
            "tags_all": {
              "Name": "private_route_nat_gw_az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-041c342817d146c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_for_nat_gateway_az1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.natgateway_az1",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:route-table/rtb-06e55a57fa93e13f8",
            "id": "rtb-06e55a57fa93e13f8",
            "owner_id": "256373779251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0abbb9c16cab50e6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_nat_gw_az2"
            },
            "tags_all": {
              "Name": "private_route_nat_gw_az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-041c342817d146c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_for_nat_gateway_az2",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.natgateway_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:security-group/sg-0da119d4f373f129a",
            "description": "Allow  port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da119d4f373f129a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "256373779251",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041c342817d146c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:security-group/sg-01e65d212213530bf",
            "description": "Allow  port 443 https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e65d212213530bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da119d4f373f129a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "256373779251",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-041c342817d146c51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:subnet/subnet-088a71bee5366edb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088a71bee5366edb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256373779251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet az1"
            },
            "tags_all": {
              "Name": "private_subnet az1"
            },
            "vpc_id": "vpc-041c342817d146c51"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:subnet/subnet-0644bd63aa1c7e39c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0644bd63aa1c7e39c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256373779251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet az2"
            },
            "tags_all": {
              "Name": "private_subnet az2"
            },
            "vpc_id": "vpc-041c342817d146c51"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:subnet/subnet-019c82cf2d8329e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019c82cf2d8329e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256373779251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet az1"
            },
            "tags_all": {
              "Name": "public_subnet az1"
            },
            "vpc_id": "vpc-041c342817d146c51"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:subnet/subnet-0ac16f3ced0d7fbf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac16f3ced0d7fbf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256373779251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet az2"
            },
            "tags_all": {
              "Name": "public_subnet az2"
            },
            "vpc_id": "vpc-041c342817d146c51"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256373779251:vpc/vpc-041c342817d146c51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7004f510f4cd212",
            "default_route_table_id": "rtb-098ed4deec5797049",
            "default_security_group_id": "sg-0ac5dcd3bc15eb5ba",
            "dhcp_options_id": "dopt-0273da330dec61c29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041c342817d146c51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098ed4deec5797049",
            "owner_id": "256373779251",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}